<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <!--    <data>-->
    <!--        <variable-->
    <!--            name="LoginViewModel"-->
    <!--            type="com.example.android.guesstheword.screens.game.GameViewModel" />-->
    <!--    </data>-->

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/welcome_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#333333"
        tools:context=".models.screens.WelcomeFragment">

        <TextView
            android:id="@+id/title_welcome"
            android:layout_width="297dp"
            android:layout_height="90dp"
            android:layout_marginTop="112dp"
            android:fontFamily="@font/kirang_haerang_regular"
            android:text="@string/title_welcome"
            android:textAlignment="textStart"
            android:textColor="@color/colorPrimary"
            android:textSize="36sp"
            android:textStyle="normal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/guideline2"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_chainStyle="packed" />

        <TextView
            android:id="@+id/some_bullshit_welcome"
            android:layout_width="317dp"
            android:layout_height="270dp"
            android:layout_marginTop="60dp"
            android:fontFamily="@font/kirang_haerang_regular"
            android:text="@string/some_bullshit_welcome"
            android:textAlignment="textStart"
            android:textColor="@color/colorPrimary"
            android:textSize="24sp"
            android:textStyle="normal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/guideline2"
            app:layout_constraintTop_toBottomOf="@+id/title_welcome"
            app:layout_constraintVertical_chainStyle="packed" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_welcome"
            style="@style/Widget.MaterialComponents.Button"
            android:layout_width="136dp"
            android:layout_height="45dp"
            android:background="#F2C94C"
            android:fontFamily="@font/questrial_regular"
            android:text="@string/button_welcome"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="16sp"
            app:cornerRadius="4dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/guideline3"
            app:strokeColor="@color/colorPrimary" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="53dp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="120dp"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintGuide_begin="604dp" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>